yml_files/Network_Policies/toblockingressandegress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
  namespace: wantoblocknspods
spec:
  podSelector:
    matchLabels:
      app: lablesofapp
  policyTypes:
    - Egress
    - Ingress
  ingress: []
  egress: []

# this will block both inbound and outboud traffic for pods
